add tags to spots